# rto_pinger

./: .env  Cargo.toml  README.md
src/: main.rs
src/data/: server_list.json
