[package]
name = "rto_pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-timer = "0.7.4"
dotenv = "0.15.0"
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }
reqwest = "0.11.16"
futures = "0.3.25"
serde = { version = "1.0.160", features = ["derive"] } 
serde_json = "1.0.96"
tokio = {version = "1.27.0", features=["full"]}
